tests/ui/borrowck/borrowck-issue-2657-2.stderr
error[E0507]: cannot move out of `*y` which is behind a shared reference
  --> $DIR/borrowck-issue-2657-2.rs:8:18
   |
LL |         let _b = *y;
   |                  ^^ move occurs because `*y` has type `Box<i32>`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -         let _b = *y;
LL +         let _b = y;
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL -         let _b = *y;
LL +         let _b = y.clone();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
